# apertium-simpleton

./: .clang-format  .editorconfig  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  README.md  apertium-simpleton.pro
.github/workflows/: build.yaml
src/: CMakeLists.txt  common.hpp  installer.cpp  installer.hpp  installer.ui  main.cpp  simpleton.cpp  simpleton.hpp  simpleton.ui  version.hpp
